# vibe

./: Cargo.toml  build.rs  mise.toml  qemu.sh  readme.md  run.sh  run_signed.sh  vibe.sh
.github/workflows/: release.yml
provisioning/: provision.sh
src/: bash_logout.sh  cli.rs  disk.rs  io.rs  main.rs  provision.sh  script.rs  share.rs
src/vm/: linux.rs  macos.rs  mod.rs
src/vm/linux/: ch.rs  mod.rs  qemu.rs
