[package]
name = "vibe"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "*"
lexopt = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "*"
objc2-foundation = { version = "*", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSError",
    "NSFileHandle",
    "NSData",
    "NSDate",
    "NSRunLoop",
    "NSObject",
] }
objc2-virtualization = "*"
block2 = "*"
dispatch2 = "*"
