[package]
name = "vibe"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "*"
lexopt = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSError",
    "NSFileHandle",
    "NSData",
    "NSDate",
    "NSRunLoop",
    "NSObject",
] }
objc2-virtualization = "0.3.2"
block2 = "0.6.2"
dispatch2 = "0.3.0"
